dist_man_MANS = \
	libzfs_core_fini.3 \
	libzfs_core.h.3 \
	libzfs_core_init.3 \
	lzc_bookmark.3 \
	lzc_clone.3 \
	lzc_create.3 \
	lzc_destroy_bookmarks.3 \
	lzc_destroy_one.3 \
	lzc_destroy_snaps.3 \
	lzc_exists.3 \
	lzc_get_bookmarks.3 \
	lzc_get_holds.3 \
	lzc_hold.3 \
	lzc_inherit.3 \
	lzc_list.3 \
	lzc_promote.3 \
	lzc_receive.3 \
	lzc_rename.3 \
	lzc_release.3 \
	lzc_rollback.3 \
	lzc_send.3 \
	lzc_send_progress.3 \
	lzc_send_space.3 \
	lzc_set_props.3 \
	lzc_snaprange_space.3 \
	lzc_snapshot.3

install-data-local:
	$(INSTALL) -d -m 0755 "$(DESTDIR)$(mandir)/man3"
